src/features/components/characters/Characters.module.css
.container {
  max-width: 1600px;
  margin: 0 auto;
  /* padding: 0 0.1rem; */
}

.wrapper{
    background: #fff;
    border-radius: 10px;
    padding: 0.5rem 0;
    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.04);  
}

.table {
  width: 100%;
  border-collapse: separate;
  border-spacing: 0;
  font-size: 0.9rem;
  /* tab-size: fixed; */
}

.grid {
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
  }
  
 
  
  .card {
    flex: 1 1 calc(25% - 1.5rem);
    max-width: calc(25% - 1.5rem);
  
    background: #ffffff;
    border: 1px solid #e5e5e5;
    border-radius: 8px;
    overflow: hidden;
  
    display: flex;
    flex-direction: column;
  }

  .card:hover {
    box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
  }
  
  @media (max-width: 1024px) {
    .card {
      flex-basis: calc(33.333% - 1.5rem);
      max-width: calc(33.333% - 1.5rem);
    }
  }
  
  @media (max-width: 640px) {
    .card {
      flex-basis: 100%;
      max-width: 100%;
    }
  }
  
  
  .image {
    width: 100%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    display: block;
  }
  
  .info {
    padding: 0.75rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.4rem;
  }
  
  .name {
    font-size: 1.05rem;
    font-weight: 600;
    margin: 0;
  }
  
  .meta {
    font-size: 0.85rem;
    font-style:oblique;
    color: #666;
    font-weight: 700;
    display: flex;
    align-items: center;
    gap: 0.4rem;
  }
  
 
  
  .status {
    align-self: flex-start;
    padding: 0.2rem 0.6rem;
    border-radius: 999px;
    font-size: 0.7rem;
    font-weight: 600;
    text-transform: uppercase;
  }
  
  /* Status colors */
  .alive {
    background: #e6f4ea;
    color: #1e7f43;
  }

  .dead {
    background: hwb(0 93% 0%);
    color: red;
  }

  .unknown {
    background: #f0f0f0;
    color: #999;
  }

  .table thead th {
    background: #fafafa;
    color: #555;
    font-weight: 600;
    font-size: 0.75rem;
    letter-spacing: 0.04em;
    text-transform: uppercase;
  
    padding: 0.5rem 1rem;
    border-bottom: 1px solid #eaeaea;
  }

  .table tbody td {
    padding: 0.5rem 1rem;
    border-bottom: 1px solid #f0f0f0;
    /* vertical-align: middle; */
    /* text-align: left; */
    color: #333;
  }
  
  .table tbody tr:last-child td {
    border-bottom: none;
  }

  .table tbody tr {
    transition: background 0.15s ease;
  }
  
  .table tbody tr:hover {
    background: #f9fafb;
  }

.table th,
.table td {
  text-align: left;
  vertical-align: middle;
}



  .avatar {
    width: 36px;
    height: 36px;
    border-radius: 8px;
  }
  
  

